# LandPPT

./: .env.custom.example  app_prototype.md  door_window_app_prototype.html  door_window_website_prototype.html  generate_mockups.py  generate_pngs.py  research_door_window.md  test_custom_api.py  web_prototype.md
ai-multi-studio/: README.md
ai-multi-studio/backend/: README.md  pyproject.toml
ai-multi-studio/backend/app/: main.py
ai-multi-studio/backend/app/api/: routes.py
ai-multi-studio/backend/app/core/: config.py
ai-multi-studio/backend/app/services/: ai_client.py
ai-multi-studio/frontend/: package.json  project.config.json  tsconfig.json
ai-multi-studio/frontend/config/: index.ts
ai-multi-studio/frontend/src/: app.config.ts  app.tsx
ai-multi-studio/frontend/src/pages/home/: index.scss  index.tsx
ai-multi-studio/frontend/src/services/: api.ts
ai-multi-studio/frontend/src/styles/: theme.scss
dev/active/door-window-prototype/: context.md  door-window-prototype-context.md  door-window-prototype-plan.md  door-window-prototype-tasks.md  plan.md  tasks.md
dev/door_window_project/: 0_project_plan.md  1_research_and_analysis.md  2_app_prototype_design.md  3_web_prototype_design.md
dev/door_window_project/prototypes/: app_quoter.html  web_index.html
docs/: CUSTOM_API_INTEGRATION.md
prototypes/app/: home.html  measure.html
prototypes/web/: detail.html  index.html
src/landppt/ai/: __init__.py  custom_provider.py  providers.py
src/landppt/core/: config.py
