[project]
name = "ai-multi-backend"
version = "0.1.0"
description = "API gateway and orchestration service for AI multi-end studio"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.5"
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
